--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,3 +20,21 @@ jobs:
           run: npm ci
         - name: Run Test
           run: npm run test  
+  deploy:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+        - name: Get Code
+          uses: actions/checkout@v6.0.1 
+          #run: |
+           #echo "cloning repo"
+           #echo "${{toJson(github)}}"
+           #git clone https://github.com/${{github.repository}}.git
+        - name: install node 20 version
+          uses: actions/setup-node@v6
+          with:
+            node-version: 20
+        - name: install dependencies
+          run: npm ci
+        - name: Deploy
+          run: echo "deploy successfully"
