--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,14 @@
 name: Deploy
-on: [push,workflow_dispatch]
+#on: [push,workflow_dispatch]
+on: 
+    push:
+      branches:
+        - main 
+        - 'feature/**'
+      paths-ignore:
+        - '.github/workflows/*'
+        - README.md  
+    workflow_dispatch:
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -34,6 +43,11 @@ jobs:
           uses: actions/setup-node@v6
           with:
             node-version: 20
+        - name: Cache Dependencies
+          uses: actions/cache@v4
+          with: 
+             path: ~/.npm
+             key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}    
         - name: install dependencies
           run: npm ci
         - name: Deploy
