--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,17 +58,17 @@ jobs:
           uses: actions/upload-artifact@v4
           with:
             name: dist-files
-            path: dist 
+            path: . 
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
         - name: Download Dist Artifact
-          uses: actions/download-artifact@v4
+          uses: actions/download-artifact@v5
           with:
                 name: dist-files
-                path: dist
+                path: .
         - name: Deploy
           run: echo "Deploy successfull"  
         
