--- a/.github/workflows/deployreactapp.yml
+++ b/.github/workflows/deployreactapp.yml
@@ -57,8 +57,8 @@ jobs:
         - name: upload artifact
           uses: actions/upload-pages-artifact@v3
           with:
-            name: dist-files
-            path: dist
+            name: github-pages
+            path: .
 
   deploy:
     needs: build
