--- a/.github/workflows/deployreactapp.yml
+++ b/.github/workflows/deployreactapp.yml
@@ -58,7 +58,7 @@ jobs:
           uses: actions/upload-pages-artifact@v3
           with:
             name: github-pages
-            path: .
+            path: dist
 
   deploy:
     needs: build
